fix(_dfpBAnne.scss, homepageV2.hbs) moving banner, adding 20px as spacing - BOLT-25670

--- a/app/styles/v2/partials/components/dfpBanner/_dfpBanner.scss
+++ b/app/styles/v2/partials/components/dfpBanner/_dfpBanner.scss
@@ -6,7 +6,7 @@
 		max-width: 100%;
 		overflow: hidden;
 		text-align: center;
-		margin-bottom: 0.5em;
+		margin-bottom: 20px;
 	}
 
 	#home_topbanner {
